--- a/app/src/main/res/layout/activity_task_details.xml
+++ b/app/src/main/res/layout/activity_task_details.xml
@@ -48,6 +48,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="right"
+                android:visibility="gone"
                 android:orientation="horizontal">
                 <TextView
                     android:gravity="right"
@@ -200,26 +201,86 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorGrey">
 
-        <android.support.v4.widget.SwipeRefreshLayout
+        <RelativeLayout
+            android:id="@+id/header"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ListView
-                android:id="@+id/lv_task"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-            </ListView>r
-        </android.support.v4.widget.SwipeRefreshLayout>
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/btn_add_task"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_marginTop="2dp"
+            android:orientation="horizontal"
+            android:background="@color/colorWhite">
+            <TextView
+                android:id="@+id/tv_report_times"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="第一次报告"
+                android:textSize="20sp"
+                android:layout_centerInParent="true"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text="切换报告"
+                android:textSize="10sp"
+                android:paddingRight="10dp"
+                android:paddingBottom="2dp"
+                android:layout_alignBaseline="@+id/tv_report_times"
+                android:textColor="@color/colorBlue"/>
+        </RelativeLayout>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/header"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="40dp"
+            ></android.support.v4.view.ViewPager>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
             android:layout_alignParentBottom="true"
-            android:layout_margin="16dp"
-            app:srcCompat="@android:drawable/ic_input_add" />
+            android:background="@color/colorWhite"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tv_report"
+                android:text="报告内容"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:textColor="@color/colorBlue"
+                android:layout_weight="1"/>
+            <View
+                android:layout_width="1dp"
+                android:background="@color/colorGrey"
+                android:layout_height="match_parent"/>
+            <TextView
+                android:id="@+id/tv_super"
+                android:text="督查点评"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:layout_weight="1"/>
+            <View
+                android:layout_width="1dp"
+                android:background="@color/colorGrey"
+                android:layout_height="match_parent"/>
+            <TextView
+                android:id="@+id/tv_leader"
+                android:text="领导点评"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:layout_weight="1"/>
+        </LinearLayout>
 
     </RelativeLayout>
 
