--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -43,8 +43,9 @@
                     android:padding="6dp"
                     android:layout_height="wrap_content" />
                 <GridView
+                    android:id="@+id/grid_view_pics"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="400dp"
                     android:numColumns="3">
                 </GridView>
             </LinearLayout>
