--- a/app/src/main/res/layout/activity_task_details.xml
+++ b/app/src/main/res/layout/activity_task_details.xml
@@ -215,11 +215,13 @@
                 android:id="@+id/tv_report_times"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="第一次报告"
+                android:text="第 1 次报告"
                 android:textSize="20sp"
                 android:layout_centerInParent="true"
                 />
+
             <TextView
+                android:id="@+id/tv_change_report"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -227,6 +229,18 @@
                 android:textSize="10sp"
                 android:paddingRight="10dp"
                 android:paddingBottom="2dp"
+                android:layout_alignBaseline="@+id/tv_report_times"
+                android:textColor="@color/colorBlue"/>
+
+            <TextView
+                android:id="@+id/tv_refresh"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="刷新"
+                android:textSize="10sp"
+                android:paddingRight="10dp"
+                android:paddingBottom="2dp"
+                android:layout_toLeftOf="@+id/tv_change_report"
                 android:layout_alignBaseline="@+id/tv_report_times"
                 android:textColor="@color/colorBlue"/>
         </RelativeLayout>
@@ -240,47 +254,57 @@
             ></android.support.v4.view.ViewPager>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:background="@color/colorWhite"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/tv_report"
-                android:text="报告内容"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:textSize="18sp"
-                android:textColor="@color/colorBlue"
-                android:layout_weight="1"/>
+            android:orientation="vertical">
             <View
-                android:layout_width="1dp"
-                android:background="@color/colorGrey"
-                android:layout_height="match_parent"/>
-            <TextView
-                android:id="@+id/tv_super"
-                android:text="督查点评"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:textSize="18sp"
-                android:layout_weight="1"/>
-            <View
-                android:layout_width="1dp"
-                android:background="@color/colorGrey"
-                android:layout_height="match_parent"/>
-            <TextView
-                android:id="@+id/tv_leader"
-                android:text="领导点评"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:textSize="18sp"
-                android:layout_weight="1"/>
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorGrey"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="@color/colorWhite"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/tv_report"
+                    android:text="报告内容"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:textSize="18sp"
+                    android:textColor="@color/colorBlue"
+                    android:layout_weight="1"/>
+                <View
+                    android:layout_width="1dp"
+                    android:background="@color/colorGrey"
+                    android:layout_height="match_parent"/>
+                <TextView
+                    android:id="@+id/tv_super"
+                    android:text="督查点评"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:textSize="18sp"
+                    android:layout_weight="1"/>
+                <View
+                    android:layout_width="1dp"
+                    android:background="@color/colorGrey"
+                    android:layout_height="match_parent"/>
+                <TextView
+                    android:id="@+id/tv_leader"
+                    android:text="领导点评"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:textSize="18sp"
+                    android:layout_weight="1"/>
+            </LinearLayout>
         </LinearLayout>
+
 
     </RelativeLayout>
 
