--- a/app/src/main/res/layout/fragment_leader.xml
+++ b/app/src/main/res/layout/fragment_leader.xml
@@ -28,6 +28,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <EditText
+                    android:id="@+id/tv_leader"
                     android:inputType="textMultiLine"
                     android:minLines="4"
                     android:scrollbars="vertical"
