--- a/app/src/main/res/layout/fragment_super.xml
+++ b/app/src/main/res/layout/fragment_super.xml
@@ -28,6 +28,7 @@
                     android:layout_height="wrap_content"
                     android:padding="6dp"/>
                 <EditText
+                    android:id="@+id/tv_super"
                     android:inputType="textMultiLine"
                     android:minLines="4"
                     android:scrollbars="vertical"
@@ -49,7 +50,7 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content" />
                     <TextView
-                        android:id="@+id/txt_taskName"
+                        android:id="@+id/tv_star"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:gravity="right"
@@ -69,12 +70,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                    />
-                <GridView
+                <com.gk.erp012.ui.view.NoScroolGridView
+                    android:id="@+id/grid_view_pics"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:numColumns="3"
                     android:padding="6dp">
-                </GridView>
+                </com.gk.erp012.ui.view.NoScroolGridView>
             </LinearLayout>
         </LinearLayout>
 
