--- a/app/src/main/res/layout/activity_create_task.xml
+++ b/app/src/main/res/layout/activity_create_task.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -17,8 +15,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_gravity="center_horizontal">
-
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,7 +36,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/txt_taskName"
+                    android:id="@+id/tv_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="right"
@@ -68,7 +64,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/txt_place"
+                    android:id="@+id/tv_place"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="right"
@@ -96,7 +92,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/txt_finacing"
+                    android:id="@+id/tv_finacing"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="right"
@@ -110,7 +106,34 @@
                 android:layout_height="1dp"
                 android:background="@color/colorGrey"
                 />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
 
+                >
+                <TextView
+                    android:text="任务责任人："
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <EditText
+                    android:id="@+id/tv_chairMan"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:inputType="number"
+                    android:layout_gravity="end"
+                    android:hint="请输入任务责任人"
+                    android:background="@null" />
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorGrey"
+                />
         </LinearLayout>
 
         <LinearLayout
@@ -119,32 +142,33 @@
             android:layout_marginTop="20dp"
             android:background="@color/colorWhite"
             android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="6dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-                <TextView
-                    android:text="汇报周期："
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
 
-                <EditText
-                    android:id="@+id/txt_num"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="right"
-                    android:inputType="number"
-                    android:layout_gravity="end"
-                    android:hint="请输入任务期数"
-                    android:background="@null" />
-            </LinearLayout>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/colorGrey"
                 ></View>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:padding="6dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="汇报周期：" />
+
+                <TextView
+                    android:id="@+id/tv_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="点击选择汇报周期"
+                    android:textSize="18sp"
+                    android:gravity="right"/>
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/view_startTime"
@@ -158,14 +182,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <TextView
-                    android:id="@+id/txt_startTime"
-                    android:layout_marginLeft="20dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:id="@+id/txt_startTime_select"
+                    android:id="@+id/tv_startTime"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:hint="点击选择开始时间"
+                    android:textSize="18sp"
                     android:gravity="right"/>
             </LinearLayout>
             <View
@@ -185,15 +206,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <TextView
-                    android:id="@+id/txt_endTime"
-                    android:layout_marginLeft="20dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:id="@+id/txt_endTime_select"
+                    android:id="@+id/tv_endTime"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:hint="点击选择结束时间"
+                    android:textSize="18sp"
                     android:gravity="right"/>
+
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
@@ -213,14 +232,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <TextView
-                    android:id="@+id/txt_depart"
-                    android:layout_marginLeft="20dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:id="@+id/txt_depart_select"
+                    android:id="@+id/tv_departType"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:hint="点击选择工作分类"
+                    android:textSize="18sp"
                     android:gravity="right"/>
 
             </LinearLayout>
@@ -236,14 +252,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <TextView
-                    android:layout_marginLeft="20dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
+                    android:id="@+id/tv_depart"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:hint="点击选择工作"
+                    android:textSize="18sp"
                     android:gravity="right"/>
-
             </LinearLayout>
 
         </LinearLayout>
@@ -259,6 +273,11 @@
                 android:text="工作照片（非必选）："
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorGrey"
+                ></View>
             <com.gk.erp012.ui.view.NoScroolGridView
                 android:id="@+id/gridview"
                 android:layout_width="match_parent"
