--- a/app/src/main/res/layout/activity_create_task.xml
+++ b/app/src/main/res/layout/activity_create_task.xml
@@ -124,7 +124,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="right"
-                    android:inputType="number"
                     android:layout_gravity="end"
                     android:hint="请输入任务责任人"
                     android:background="@null" />
@@ -169,7 +168,11 @@
                     android:textSize="18sp"
                     android:gravity="right"/>
             </LinearLayout>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorGrey"
+                />
             <LinearLayout
                 android:id="@+id/view_startTime"
                 android:layout_width="match_parent"
@@ -240,7 +243,11 @@
                     android:gravity="right"/>
 
             </LinearLayout>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorGrey"
+                />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -305,7 +312,7 @@
                     android:layout_height="wrap_content" />
 
                 <EditText
-                    android:id="@+id/txt_goal"
+                    android:id="@+id/tv_goal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="top"
