--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -1,49 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/swipe"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bt_nobgd"
-    android:orientation="vertical"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="35dp">
+    app:clickToClose="true">
+
+    <LinearLayout
+        android:tag="Bottom1"
+        android:id="@+id/bottom_wrapper"
+        android:layout_width="160dp"
+        android:weightSum="1"
+        android:layout_height="match_parent">
+
         <TextView
-            android:id="@+id/tv_name"
+            android:id="@+id/change"
+            android:text="编辑"
+            android:layout_weight="0.5"
+            android:gravity="center"
+            android:clickable="true"
+            android:background="@color/colorPrimary"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_centerVertical="true"
-            android:text="GkTEST NAME"
-            android:textColor="@color/colorBlack"
-            android:textSize="22sp"/>
+            android:layout_height="match_parent" />
+
         <TextView
-            android:id="@+id/tv_status"
+            android:id="@+id/delete"
+            android:text="删除"
+            android:background="@color/colorRed"
+            android:gravity="center"
+            android:layout_weight="0.5"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:gravity="right"
-            android:textColor="@color/colorBlue"
-            android:text="已按期限"
-            />
-    </RelativeLayout>
-    <TextView
-        android:id="@+id/tv_goal"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
-        android:maxLines="3" />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:background="@drawable/bt_nobgd"
+        android:orientation="vertical"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="35dp">
+
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="10dp"
+                android:text="GkTEST NAME"
+                android:textColor="@color/colorBlack"
+                android:textSize="22sp" />
+
+            <TextView
+                android:id="@+id/tv_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:gravity="right"
+                android:text="已按期限"
+                android:textColor="@color/colorBlue" />
+        </RelativeLayout>
+
         <TextView
-            android:id="@+id/tv_time"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_goal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:text="454545"/>
-    </RelativeLayout>
-</LinearLayout>
+            android:maxLines="3"
+            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat." />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text="454545" />
+        </RelativeLayout>
+    </LinearLayout>
+
+</com.daimajia.swipe.SwipeLayout>
