--- a/app/src/main/res/layout/fragment_leader.xml
+++ b/app/src/main/res/layout/fragment_leader.xml
@@ -45,7 +45,7 @@
     </ScrollView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/btn_add_task"
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
