--- a/app/src/main/res/layout/fragment_depart.xml
+++ b/app/src/main/res/layout/fragment_depart.xml
@@ -35,7 +35,7 @@
 
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/btn_add_depart"
+        android:id="@+id/btn_add_departClass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
