--- a/app/src/main/res/layout/fragment_stuff0.xml
+++ b/app/src/main/res/layout/fragment_stuff0.xml
@@ -1,9 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.gk.erp012.ui.fragment.TaskFragment">
+    android:orientation="vertical"
+    tools:context="com.gk.erp012.ui.fragment.Stuff0Fragment">
 
     <LinearLayout
         android:id="@+id/header"
@@ -11,12 +11,11 @@
         android:layout_height="40dp">
 
         <TextView
-            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorGrey"
             android:gravity="center"
-            android:text="人员列表"
+            android:text="督查督办人员列表"
             android:textSize="20sp" />
     </LinearLayout>
 
@@ -27,21 +26,11 @@
         android:layout_height="match_parent">
 
         <ListView
-            android:id="@+id/lv_task"
+            android:id="@+id/listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
         </ListView>
     </android.support.v4.widget.SwipeRefreshLayout>
 
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/btn_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_margin="16dp"
-        app:srcCompat="@android:drawable/ic_input_add" />
-
-</RelativeLayout>
+</LinearLayout>
