--- a/app/src/main/res/layout/activity_depart_list.xml
+++ b/app/src/main/res/layout/activity_depart_list.xml
@@ -41,6 +41,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_margin="16dp"
+        android:backgroundTint="@color/colorFense"
+        app:borderWidth="0dp"
         app:srcCompat="@android:drawable/ic_input_add" />
 
 </RelativeLayout>
