--- a/app/src/main/res/layout/fragment_super.xml
+++ b/app/src/main/res/layout/fragment_super.xml
@@ -89,6 +89,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
+        android:backgroundTint="@color/colorFense"
+        app:borderWidth="0dp"
         app:srcCompat="@android:drawable/ic_input_add" />
 
 </RelativeLayout>
