--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -41,6 +41,8 @@
             android:id="@+id/btn_add_task"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/colorFense"
+            app:borderWidth="0dp"
             app:srcCompat="@android:drawable/ic_input_add" />
     </LinearLayout>
     <LinearLayout
