--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -81,13 +81,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="16dp"
-        android:backgroundTint="@color/colorFense"
-        app:borderWidth="0dp"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        style="@style/Widget.MaterialSheetFab.Fab"
+        android:backgroundTint="@color/colorFense" />
 
 </RelativeLayout>
